--- a/Notebooks/consumption.ipynb
+++ b/Notebooks/consumption.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -315,11 +315,11 @@
      "output_type": "stream",
      "text": [
       "           start_date  total_grid_load  residual_load  hydro_pumped_storage\n",
-      "0 2023-01-01 00:00:00              NaN            NaN                494.00\n",
-      "1 2023-01-01 01:00:00              NaN            NaN                301.00\n",
-      "2 2023-01-01 02:00:00              NaN            NaN                640.50\n",
-      "3 2023-01-01 03:00:00              NaN            NaN                894.50\n",
-      "4 2023-01-01 04:00:00              NaN            NaN                942.75\n"
+      "0 2023-01-01 00:00:00              0.0            0.0               2076.75\n",
+      "1 2023-01-01 01:00:00              0.0            0.0               1767.75\n",
+      "2 2023-01-01 02:00:00              0.0         1738.0               3050.25\n",
+      "3 2023-01-01 03:00:00              0.0            0.0               3704.00\n",
+      "4 2023-01-01 04:00:00              0.0            0.0               3800.75\n"
      ]
     }
    ],
@@ -346,7 +346,8 @@
     "\n",
     "# 5. Resample using the DatetimeIndex\n",
     "#consumption_hourly = consumption.resample('1h').mean()\n",
-    "consumption_hourly = consumption.resample('1h').ffill()  # Forward fill missing values\n",
+    "#consumption_hourly = consumption.resample('1h').ffill()  # Forward fill missing values\n",
+    "consumption_hourly = consumption.resample('1h').sum()\n",
     "\n",
     "\n",
     "# 6. Reset index if needed (optional)\n",
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -401,44 +402,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start_date                  0\n",
-      "total_grid_load         19056\n",
-      "residual_load           18619\n",
-      "hydro_pumped_storage     2506\n",
+      "start_date              0\n",
+      "total_grid_load         0\n",
+      "residual_load           0\n",
+      "hydro_pumped_storage    0\n",
       "dtype: int64\n",
+      "Empty DataFrame\n",
+      "Columns: [start_date, total_grid_load, residual_load, hydro_pumped_storage]\n",
+      "Index: []\n",
       "               start_date  total_grid_load  residual_load  hydro_pumped_storage\n",
-      "0     2023-01-01 00:00:00              NaN            NaN                494.00\n",
-      "1     2023-01-01 01:00:00              NaN            NaN                301.00\n",
-      "2     2023-01-01 02:00:00              NaN            NaN                640.50\n",
-      "3     2023-01-01 03:00:00              NaN            NaN                894.50\n",
-      "4     2023-01-01 04:00:00              NaN            NaN                942.75\n",
+      "0     2023-01-01 00:00:00              0.0            0.0               2076.75\n",
+      "1     2023-01-01 01:00:00              0.0            0.0               1767.75\n",
+      "2     2023-01-01 02:00:00              0.0         1738.0               3050.25\n",
+      "3     2023-01-01 03:00:00              0.0            0.0               3704.00\n",
+      "4     2023-01-01 04:00:00              0.0            0.0               3800.75\n",
       "...                   ...              ...            ...                   ...\n",
-      "19051 2025-03-04 19:00:00              NaN            NaN                  0.50\n",
-      "19052 2025-03-04 20:00:00              NaN            NaN                   NaN\n",
-      "19053 2025-03-04 21:00:00              NaN            NaN                   NaN\n",
-      "19054 2025-03-04 22:00:00              NaN            NaN                   NaN\n",
-      "19055 2025-03-04 23:00:00              NaN            NaN                   NaN\n",
-      "\n",
-      "[19056 rows x 4 columns]\n",
-      "               start_date  total_grid_load  residual_load  hydro_pumped_storage\n",
-      "0     2023-01-01 00:00:00              NaN            NaN                494.00\n",
-      "1     2023-01-01 01:00:00              NaN            NaN                301.00\n",
-      "2     2023-01-01 02:00:00              NaN            NaN                640.50\n",
-      "3     2023-01-01 03:00:00              NaN            NaN                894.50\n",
-      "4     2023-01-01 04:00:00              NaN            NaN                942.75\n",
-      "...                   ...              ...            ...                   ...\n",
-      "19051 2025-03-04 19:00:00              NaN            NaN                  0.50\n",
-      "19052 2025-03-04 20:00:00              NaN            NaN                   NaN\n",
-      "19053 2025-03-04 21:00:00              NaN            NaN                   NaN\n",
-      "19054 2025-03-04 22:00:00              NaN            NaN                   NaN\n",
-      "19055 2025-03-04 23:00:00              NaN            NaN                   NaN\n",
+      "19051 2025-03-04 19:00:00              0.0            0.0                  1.50\n",
+      "19052 2025-03-04 20:00:00              0.0            0.0                  0.00\n",
+      "19053 2025-03-04 21:00:00              0.0            0.0                  0.00\n",
+      "19054 2025-03-04 22:00:00              0.0            0.0                  0.00\n",
+      "19055 2025-03-04 23:00:00              0.0            0.0                  0.00\n",
       "\n",
       "[19056 rows x 4 columns]\n"
      ]
